--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Кибершоп-яркие, стильные киберприятности, созданные с любовью"
     />
     <link rel="icon" href="%PUBLIC_URL%/phot.png" />
 
